--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
              />
         <activity
-            android:name=".MyPersonalProfileActivity"
+            android:name=".feature.profile.view.MyPersonalProfileActivity"
             android:exported="false"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
