--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        appcompat_version = "1.2.0"
+        constraintlayout_version = "2.0.2"
+        core_ktx_version = "1.3.2"
+        kotlin_version = "1.3.72"
+        material_version = "1.2.1"
+        nav_version = "2.3.1"
+    }
+
+}
 plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+
 }
